<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="edu.mclab1.pages.UploadPage" >

    
    <item
        android:id="@+id/action_camera"
        android:icon="@drawable/ic_action_camera"
		android:orderInCategory="13"
		android:showAsAction="always"
		android:title="@string/action_camera"/>
    <item
        android:id="@+id/action_gallery"
        android:icon="@drawable/ic_action_storage"
		android:orderInCategory="10"
		android:showAsAction="always"
		android:title="@string/action_gallery"/>
    <item
        android:id="@+id/action_media"
        android:icon="@drawable/ic_action_slideshow"
		android:orderInCategory="9"
		android:showAsAction="always"
		android:title="@string/action_media"/>
</menu>

